resolved alignment issues.

--- a/task-1/style.css
+++ b/task-1/style.css
@@ -1,32 +1,35 @@
 button {
     margin: 20px;
+    cursor: pointer;
+    font-size: 1em;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
 }
 
 .cart-btn {
     background-color: #c63928;
     color: white;
-    padding: 15px 30px;
+    padding: 15px 40px;
     border: none;
 }
 
 .cart-btn:hover {
     background-color: #ed4d4f;
-    cursor: pointer;
 }
 
 .start-btn {
     background-color: #fcd835;
     color: #2a61fb;
-    padding: 11px;
-    border: 2px solid #2a61fb;
+    padding: 12px 30px;
+    border: 3px solid #2a61fb;
     font-family: 'Gugi', cursive;
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: normal;
 }
 
 .start-btn:hover {
     background-color: #2a61fb;
     color: #fcd835;
-    cursor: pointer;
 }
 
 .login-btn {
@@ -35,11 +38,6 @@ button {
     border-radius: 20px;
     border: none;
     padding: 10px 30px;
-}
-
-.login-btn:hover {
-    cursor: pointer;
-    background-image: linear-gradient(to right, #5ad0da, #a9d485);
 }
 
 .sign-up-btn {
@@ -53,12 +51,9 @@ button {
 .sign-up-btn:hover {
     background-color: #6749ea;
     color: white;
-    cursor: pointer;
 }
 
 .subscribe-btn {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
     background-image: linear-gradient(#f9c433, #f5a032);
     color: white;
     border-radius: 6px;
@@ -67,9 +62,9 @@ button {
 }
 
 .subscribe-btn:hover {
+    background-image: none;
     background-color: #f38d31;
     border-color: #f49f32;
-    cursor: pointer;
 }
 
 .twitter-btn {
@@ -84,5 +79,4 @@ button {
 .twitter-btn:hover {
     background-color: #37a1f3;
     color: white;
-    cursor: pointer;
 }
